--- a/notre-vision.html
+++ b/notre-vision.html
@@ -21,8 +21,9 @@
                 <ul>
                     <li><a href="qui-sommes-nous.html">Qui sommes nous ?</a></li>
                     <li><a href="notre-vision.html" class="active">Notre vision</a></li>
-                    <li><a href="nos-engagements.html">Nos engagements</a></li>
-                    <li><a href="index.html#publication">Publication</a></li>
+                    <li><a href="green-it-impact.html">Green IT</a></li>
+                    <!-- <li><a href="nos-engagements.html">Nos engagements</a></li> -->
+                    <li><a href="index.html#publication">Publications</a></li>
                     <li><a href="index.html#contact">Nous contacter</a></li>
                 </ul>
             </nav>
