mise a jour code gnrl arrangements

--- a/green-it-impact.html
+++ b/green-it-impact.html
@@ -1,13 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Découvrez tous les événements en Île-de-France. Spectacles, concerts, expositions et plus encore.">
-    <title>IDEvent - L'événement à grande vitesse</title>
+    <title>Comparatif Green IT - IDEvent</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <header class="site-header">
         <div class="container nav-container">
@@ -19,12 +19,12 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="qui-sommes-nous.html">Qui sommes nous ?</a></li>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="qui-sommes-nous.html">Qui sommes-nous</a></li>
                     <li><a href="notre-vision.html">Notre vision</a></li>
-                    <li><a href="green-it-impact.html">Green IT</a></li>
-                    <!-- <li><a href="nos-engagements.html">Nos engagements</a></li> -->
-                    <li><a href="publication.html">Publications</a></li>
-                    <li><a href="contact.html">Nous contacter</a></li>
+                    <li><a href="nos-engagements.html">Nos engagements</a></li>
+                    <li><a href="green-it-impact.html">Impact Green IT</a></li>
+                    <li><a href="test.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -38,9 +38,6 @@
                     <p>Chez IDEvent, nous croyons qu'un service numérique de qualité peut aussi être respectueux de l'environnement et de ses utilisateurs. C'est pourquoi nous adoptons les principes du Green IT et du Low-Web pour vous offrir une expérience optimale, rapide et éco-responsable.</p>
                 </div>
                 <div class="intro-image-content">
-                    <!-- IMAGE PLACEHOLDER: Illustration symbolisant la légèreté, l'écologie et la technologie.
-                         Ex: Une feuille d'arbre stylisée avec des éléments de circuit imprimé discrets, ou un paysage numérique minimaliste et lumineux.
-                         Nom du fichier : images/engagement-concept.png -->
                     <img src="images/placeholder_team.png" alt="Concept de l'engagement IDEvent pour un web léger et écologique" loading="lazy">
                 </div>
             </div>
@@ -51,31 +48,29 @@
                 <div class="team-grid-members">
                     <article class="team-member-card">
                         <h1 style="color: orange;">57%</h1>
-                        <p>De réduction d'emissions de CO<sub>2</sub> </p>
-                        <p class="member-quote">L'empreinte carbone du numérique est considérable, équivalente à celle du secteur de l'aviation civile (environ <strong>2 à 4% des émissions mondiales de gaz à effet de serre</strong> selon diverses études comme celles du Shift Project).</p>
+                        <p>de réduction d'émissions de CO<sub>2</sub></p>
+                        <p class="member-quote">L'empreinte carbone du numérique est considérable, équivalente à celle de l'aviation civile (environ <strong>2 à 4% des émissions mondiales</strong> selon le Shift Project).</p>
                     </article>
-                
                     <article class="team-member-card">
                         <h1 style="color: orange;">100%</h1>
-                        <p>D'accessibilité: Un Web Ouvert à Tous</p>
-                        <p class="member-quote">Navigation facilitée pour tous : Y compris pour les personnes utilisant des lecteurs d'écran, la navigation au clavier, ou ayant des déficiences visuelles (contrastes, taille de police).</p>
+                        <p>d'accessibilité : Un Web pour tous</p>
+                        <p class="member-quote">Navigation facilitée pour tous : lecteurs d'écran, clavier seul, déficiences visuelles (contrastes, tailles de police).</p>
                     </article>
-
                     <article class="team-member-card">
                         <h1 style="color: orange;">70%</h1>
-                        <p>Plus léger qu'un site standard</p>
-                        <p class="member-quote">Une navigation fluide sans frustration, ce qui augmente l'engagement et la satisfaction. Cela a aussi un impact positif sur le référencement (SEO), Google favorisant les sites rapides.</p>
+                        <p>plus léger qu'un site standard</p>
+                        <p class="member-quote">Navigation rapide, engagement utilisateur accru, et meilleur référencement (SEO).</p>
                     </article>
-
                     <article class="team-member-card">
                         <h1 style="color: orange;">50%</h1>
-                        <p>D'économie de données mobiles</p>
-                        <p class="member-quote">Une différence qui se ressent rapidement sur la facture, surtout pour les utilisateurs fréquents. Par exemple, une page standard peut peser plusieurs Mo, alors qu'une page Low-Web vise souvent <strong>quelques centaines de Ko, voire moins</strong>.</p>
+                        <p>d'économie de données mobiles</p>
+                        <p class="member-quote">Une page Low-Web vise <strong>quelques centaines de Ko</strong> contre plusieurs Mo pour une page standard.</p>
                     </article>
                 </div>
             </div>
         </section>
     </main>
+
     <footer class="site-footer-bottom">
         <div class="container footer-container">
             <div class="footer-logo-info">
