--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
                 <ul>
                     <li><a href="qui-sommes-nous.html">Qui sommes nous ?</a></li>
                     <li><a href="notre-vision.html">Notre vision</a></li>
-                    <li><a href="green-it-impact.html">Green IT</a></li>
-                    <!-- <li><a href="nos-engagements.html">Nos engagements</a></li> -->
-                    <li><a href="publication.html">Publications</a></li>
+                    <li><a href="nos-engagements.html">Nos engagements</a></li>
+                    <li><a href="publication.html">Publication</a></li>
                     <li><a href="contact.html">Nous contacter</a></li>
                 </ul>
             </nav>
