--- a/green-it-impact.html
+++ b/green-it-impact.html
@@ -1,93 +1,97 @@
-
 <!DOCTYPE html>
+
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Découvrez tous les événements en Île-de-France. Spectacles, concerts, expositions et plus encore.">
-    <title>Comparatif Green IT - IDEvent</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta content="Découvrez tous les événements en Île-de-France. Spectacles, concerts, expositions et plus encore." name="description"/>
+<title>IDEvent - L'événement à grande vitesse</title>
+<link href="style.css" rel="stylesheet"/>
 </head>
 <body>
-    <header class="site-header">
-        <div class="container nav-container">
-            <a href="index.html" class="logo-link"> 
-                <div class="logo">
-                    <img src="images/logo.ico" alt="Logo IDEvent Globe">
-                    <span>IDEvent</span>
-                </div>
-            </a>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="qui-sommes-nous.html">Qui sommes-nous</a></li>
-                    <li><a href="notre-vision.html">Notre vision</a></li>
-                    <li><a href="nos-engagements.html">Nos engagements</a></li>
-                    <li><a href="green-it-impact.html">Impact Green IT</a></li>
-                    <li><a href="test.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+<header class="site-header">
+<div class="container nav-container">
+<a class="logo-link" href="index.html">
+<div class="logo">
+<img alt="Logo IDEvent Globe" src="images/logo.ico"/>
+<span>IDEvent</span>
+</div>
+</a>
 
-    <main>
-        <section class="page-intro engagement-intro-section" id="engagement-intro">
-            <div class="container intro-grid">
-                <div class="intro-text-content">
-                    <h2>UN WEB PLUS LÉGER, <br>POUR UN IMPACT <span class="highlight-orange">PLUS POSITIF</span></h2>
-                    <p>Chez IDEvent, nous croyons qu'un service numérique de qualité peut aussi être respectueux de l'environnement et de ses utilisateurs. C'est pourquoi nous adoptons les principes du Green IT et du Low-Web pour vous offrir une expérience optimale, rapide et éco-responsable.</p>
-                </div>
-                <div class="intro-image-content">
-                    <img src="images/placeholder_team.png" alt="Concept de l'engagement IDEvent pour un web léger et écologique" loading="lazy">
-                </div>
-            </div>
-        </section>
+<nav>
+<ul>
+<li><a href="index.html">Accueil</a></li>
+<li><a href="qui-sommes-nous.html">Qui sommes-nous ?</a></li>
+<li><a href="notre-vision.html">Notre vision</a></li>
+<li><a href="nos-engagements.html">Nos engagements</a></li>
+<li><a href="green-it-impact.html">Green IT</a></li>
+<li><a href="comparatif.html">Comparatif</a></li>
+<li><a href="test.html">Test</a></li>
+<li><a href="contact.html">Nous contacter</a></li>
+</ul>
+</nav>
 
-        <section class="team-members">
-            <div class="container">
-                <div class="team-grid-members">
-                    <article class="team-member-card">
-                        <h1 style="color: orange;">57%</h1>
-                        <p>de réduction d'émissions de CO<sub>2</sub></p>
-                        <p class="member-quote">L'empreinte carbone du numérique est considérable, équivalente à celle de l'aviation civile (environ <strong>2 à 4% des émissions mondiales</strong> selon le Shift Project).</p>
-                    </article>
-                    <article class="team-member-card">
-                        <h1 style="color: orange;">100%</h1>
-                        <p>d'accessibilité : Un Web pour tous</p>
-                        <p class="member-quote">Navigation facilitée pour tous : lecteurs d'écran, clavier seul, déficiences visuelles (contrastes, tailles de police).</p>
-                    </article>
-                    <article class="team-member-card">
-                        <h1 style="color: orange;">70%</h1>
-                        <p>plus léger qu'un site standard</p>
-                        <p class="member-quote">Navigation rapide, engagement utilisateur accru, et meilleur référencement (SEO).</p>
-                    </article>
-                    <article class="team-member-card">
-                        <h1 style="color: orange;">50%</h1>
-                        <p>d'économie de données mobiles</p>
-                        <p class="member-quote">Une page Low-Web vise <strong>quelques centaines de Ko</strong> contre plusieurs Mo pour une page standard.</p>
-                    </article>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="site-footer-bottom">
-        <div class="container footer-container">
-            <div class="footer-logo-info">
-                <a href="index.html" class="logo-link"> 
-                    <div class="logo">
-                        <img src="images/logo_big.webp" alt="Logo IDEvent Globe">
-                        <span>IDEvent</span>
-                    </div>
-                </a>
-                <p>Tous les événements en Île-de-France, au même endroit.</p>
-            </div>
-            <div class="footer-contact-details">
-                <p><img src="images/localisation_logo.webp" alt="Icône localisation" class="footer-icon" loading="lazy"> 30 Avenue de la République, 94800 Villejuif</p>
-                <p><img src="images/mail_logo.webp" alt="Icône email" class="footer-icon" loading="lazy"> <a href="mailto:business@idevent.com">business@idevent.com</a></p>
-                <p><img src="images/phone_logo.webp" alt="Icône téléphone" class="footer-icon" loading="lazy"> <a href="tel:+33123456789">+33 01 23 45 67 89</a></p>
-            </div>
-        </div>
-    </footer>
+</div>
+</header>
+<main>
+<section class="page-intro engagement-intro-section" id="engagement-intro">
+<div class="container intro-grid">
+<div class="intro-text-content">
+<h2>UN WEB PLUS LÉGER, <br/>POUR UN IMPACT <span class="highlight-orange">PLUS POSITIF</span></h2>
+<p>Chez IDEvent, nous croyons qu'un service numérique de qualité peut aussi être respectueux de l'environnement et de ses utilisateurs. C'est pourquoi nous adoptons les principes du Green IT et du Low-Web pour vous offrir une expérience optimale, rapide et éco-responsable.</p>
+</div>
+<div class="intro-image-content">
+<!-- IMAGE PLACEHOLDER: Illustration symbolisant la légèreté, l'écologie et la technologie.
+                         Ex: Une feuille d'arbre stylisée avec des éléments de circuit imprimé discrets, ou un paysage numérique minimaliste et lumineux.
+                         Nom du fichier : images/engagement-concept.png -->
+<img alt="Concept de l'engagement IDEvent pour un web léger et écologique" loading="lazy" src="images/placeholder_team.png"/>
+</div>
+</div>
+</section>
+<section class="team-members">
+<div class="container">
+<div class="team-grid-members">
+<article class="team-member-card">
+<h1 style="color: orange;">57%</h1>
+<p>De réduction d'emissions de CO<sub>2</sub> </p>
+<p class="member-quote">L'empreinte carbone du numérique est considérable, équivalente à celle du secteur de l'aviation civile (environ <strong>2 à 4% des émissions mondiales de gaz à effet de serre</strong> selon diverses études comme celles du Shift Project).</p>
+</article>
+<article class="team-member-card">
+<h1 style="color: orange;">100%</h1>
+<p>D'accessibilité: Un Web Ouvert à Tous</p>
+<p class="member-quote">Navigation facilitée pour tous : Y compris pour les personnes utilisant des lecteurs d'écran, la navigation au clavier, ou ayant des déficiences visuelles (contrastes, taille de police).</p>
+</article>
+<article class="team-member-card">
+<h1 style="color: orange;">70%</h1>
+<p>Plus léger qu'un site standard</p>
+<p class="member-quote">Une navigation fluide sans frustration, ce qui augmente l'engagement et la satisfaction. Cela a aussi un impact positif sur le référencement (SEO), Google favorisant les sites rapides.</p>
+</article>
+<article class="team-member-card">
+<h1 style="color: orange;">50%</h1>
+<p>D'économie de données mobiles</p>
+<p class="member-quote">Une différence qui se ressent rapidement sur la facture, surtout pour les utilisateurs fréquents. Par exemple, une page standard peut peser plusieurs Mo, alors qu'une page Low-Web vise souvent <strong>quelques centaines de Ko, voire moins</strong>.</p>
+</article>
+</div>
+</div>
+</section>
+</main>
+<footer class="site-footer-bottom">
+<div class="container footer-container">
+<div class="footer-logo-info">
+<a class="logo-link" href="index.html">
+<div class="logo">
+<img alt="Logo IDEvent Globe" src="images/logo_big.webp"/>
+<span>IDEvent</span>
+</div>
+</a>
+<p>Tous les événements en Île-de-France, au même endroit.</p>
+</div>
+<div class="footer-contact-details">
+<p><img alt="Icône localisation" class="footer-icon" loading="lazy" src="images/localisation_logo.webp"/> 30 Avenue de la République, 94800 Villejuif</p>
+<p><img alt="Icône email" class="footer-icon" loading="lazy" src="images/mail_logo.webp"/> <a href="mailto:business@idevent.com">business@idevent.com</a></p>
+<p><img alt="Icône téléphone" class="footer-icon" loading="lazy" src="images/phone_logo.webp"/> <a href="tel:+33123456789">+33 01 23 45 67 89</a></p>
+</div>
+</div>
+</footer>
 </body>
 </html>
