--- a/notre-vision.html
+++ b/notre-vision.html
@@ -1,160 +1,157 @@
 <!DOCTYPE html>
+
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Découvrez la vision d'IDEvent : simplifier la découverte d'événements en Île-de-France et enrichir votre vie culturelle.">
-    <title>IDEvent - Notre Vision</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta content="Découvrez la vision d'IDEvent : simplifier la découverte d'événements en Île-de-France et enrichir votre vie culturelle." name="description"/>
+<title>IDEvent - Notre Vision</title>
+<link href="style.css" rel="stylesheet"/>
 </head>
 <body>
+<header class="site-header">
+<div class="container nav-container">
+<a class="logo-link" href="index.html">
+<div class="logo">
+<img alt="Logo IDEvent Globe" src="images/logo.ico"/>
+<span>IDEvent</span>
+</div>
+</a>
 
-    <header class="site-header">
-        <div class="container nav-container">
-            <a href="index.html" class="logo-link">
-                <div class="logo">
-                    <img src="images/logo.ico" alt="Logo IDEvent Globe">
-                    <span>IDEvent</span>
-                </div>
-            </a>
-            <nav>
-                <ul>
-                    <li><a href="qui-sommes-nous.html">Qui sommes nous ?</a></li>
-                    <li><a href="notre-vision.html" class="active">Notre vision</a></li>
-                    <li><a href="nos-engagements.html">Nos engagements</a></li>
-                    <li><a href="index.html#publication">Publication</a></li>
-                    <li><a href="index.html#contact">Nous contacter</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+<nav>
+<ul>
+<li><a href="index.html">Accueil</a></li>
+<li><a href="qui-sommes-nous.html">Qui sommes-nous ?</a></li>
+<li><a href="notre-vision.html">Notre vision</a></li>
+<li><a href="nos-engagements.html">Nos engagements</a></li>
+<li><a href="green-it-impact.html">Green IT</a></li>
+<li><a href="comparatif.html">Comparatif</a></li>
+<li><a href="test.html">Test</a></li>
+<li><a href="contact.html">Nous contacter</a></li>
+</ul>
+</nav>
 
-    <main>
-        <section class="page-intro vision-intro-section" id="vision-intro">
-            <div class="container intro-grid">
-                <div class="intro-text-content">
-                    <h2>EXPLOREZ L'ÎLE-DE-FRANCE <br>ET VIVEZ <span class="highlight-orange">CHAQUE INSTANT</span></h2>
-                    <p>Notre vision est de rendre la richesse culturelle et événementielle de l'Île-de-France accessible à tous, en un seul clic. Nous voulons connecter les habitants et les visiteurs aux expériences qui animent la région, des grands festivals aux pépites locales, pour des découvertes inoubliables et des sorties spontanées.</p>
-                </div>
-                <div class="intro-image-content">
-                    <img src="images/vision.webp" alt="Illustration de la vision IDEvent pour l'exploration de l'Île-de-France" loading="lazy">
-                </div>
-            </div>
-        </section>
-
-        <section class="vision-pillars">
-            <div class="container pillars-grid">
-                <div class="pillars-image-content">
-                     <img src="images/smarthpone-user.webp" alt="Personnes consultant des événements sur leurs appareils" loading="lazy">
-                </div>
-                <div class="pillars-text-content">
-                    <article class="pillar-item">
-                        <div class="pillar-icon">
-                            <img src="images/decouverte_logo.webp" alt="Icône Découverte" loading="lazy">
-                        </div>
-                        <div class="pillar-text">
-                            <h3>Découverte Facilitée</h3>
-                            <p>Nous centralisons tous les événements pour que vous trouviez facilement votre prochaine sortie, adaptée à vos goûts et à votre localisation.</p>
-                        </div>
-                    </article>
-                    <article class="pillar-item">
-                        <div class="pillar-icon">
-                            <img src="images/lan_logo.webp" alt="Icône Connexion Locale" loading="lazy">
-                        </div>
-                        <div class="pillar-text">
-                            <h3>Connexion Locale</h3>
-                            <p>Nous soutenons les organisateurs locaux et mettons en lumière la diversité des initiatives, renforçant le tissu social et culturel.</p>
-                        </div>
-                    </article>
-                    <article class="pillar-item">
-                        <div class="pillar-icon">
-                            <img src="images/diversite_logo.webp" alt="Icône Richesse Culturelle" loading="lazy">
-                        </div>
-                        <div class="pillar-text">
-                            <h3>Richesse et Diversité</h3>
-                            <p>Valoriser chaque type d'événement, des arts vivants aux marchés de créateurs, pour une offre culturelle complète et variée.</p>
-                        </div>
-                    </article>
-                    <article class="pillar-item">
-                        <div class="pillar-icon">
-                            <img src="images/simplicite_logo.webp" alt="Icône Simplicité et Spontanéité" loading="lazy">
-                        </div>
-                        <div class="pillar-text">
-                            <h3>Simplicité et Spontanéité</h3>
-                            <p>Une plateforme intuitive pour planifier vos sorties ou trouver une activité de dernière minute, sans effort.</p>
-                        </div>
-                    </article>
-                </div>
-            </div>
-        </section>
-
-        <section class="vision-testimonials">
-            <div class="container">
-                <h2>... Ce qu'ils en <span class="highlight-blue">pensent</span></h2>
-                <div class="testimonials-grid">
-                    <article class="testimonial-card">
-                        <div class="testimonial-author">
-                            <img src="images/placeholder.png" alt="Photo de Prénom NOM 1" loading="lazy">
-                            <p class="author-name">Prénom NOM 1 <span class="author-role">(Utilisateur Passionné)</span></p>
-                        </div>
-                        <blockquote class="testimonial-quote">
-                            <p>"Avec IDEvent, je redécouvre ma région chaque week-end ! C'est tellement simple de trouver des événements qui me correspondent. Une vraie mine d'or pour les curieux."</p>
-                        </blockquote>
-                    </article>
-
-                    <article class="testimonial-card">
-                        <div class="testimonial-author">
-                            <img src="images/placeholder.png" alt="Photo de Prénom NOM 2" loading="lazy">
-                            <p class="author-name">Prénom NOM 2 <span class="author-role">(Organisateur d'Événement Local)</span></p>
-                        </div>
-                        <blockquote class="testimonial-quote">
-                            <p>"IDEvent nous a offert une visibilité incroyable. Nos petits événements touchent maintenant un public bien plus large. C'est un super outil pour dynamiser la vie locale."</p>
-                        </blockquote>
-                    </article>
-
-                    <article class="testimonial-card">
-                        <div class="testimonial-author">
-                            <img src="images/placeholder.png" alt="Photo de Prénom NOM 3" loading="lazy">
-                            <p class="author-name">Prénom NOM 3 <span class="author-role">(Nouveau Résident)</span></p>
-                        </div>
-                        <blockquote class="testimonial-quote">
-                            <p>"Arrivé récemment en Île-de-France, IDEvent est devenu mon guide indispensable pour m'intégrer et découvrir la richesse culturelle. Facile et toujours pertinent !"</p>
-                        </blockquote>
-                    </article>
-                     <article class="testimonial-card">
-                        <div class="testimonial-author">
-                            <img src="images/placeholder.png" alt="Photo de Prénom NOM 4" loading="lazy">
-                            <p class="author-name">Prénom NOM 4 <span class="author-role">(Adepte de Sorties Spontanées)</span></p>
-                        </div>
-                        <blockquote class="testimonial-quote">
-                            <p>"Je ne planifie jamais rien longtemps à l'avance. Grâce à IDEvent, je trouve toujours une idée de sortie sympa, même au dernier moment. C'est génial !"</p>
-                        </blockquote>
-                    </article>
-                </div>
-            </div>
-        </section>
-
-    </main>
-
-    <footer class="site-footer-bottom">
-        <div class="container footer-container">
-            <div class="footer-logo-info">
-                 <a href="index.html" class="logo-link">
-                    <div class="logo">
-                        <img src="images/logo_big.webp" alt="Logo IDEvent Globe">
-                        <span>IDEvent</span>
-                    </div>
-                </a>
-                <p>Tous les événements en Île-de-France, au même endroit.</p>
-                <p class="copyright">© IDEvent - 2025</p>
-            </div>
-            <div class="footer-contact-details">
-                <p><img src="images/localisation_logo.webp" alt="Icône localisation" class="footer-icon" loading="lazy"> 30 Avenue de la République, 94800 Villejuif</p>
-                <p><img src="images/mail_logo.webp" alt="Icône email" class="footer-icon" loading="lazy"> <a href="mailto:business@idevent.com">business@idevent.com</a></p>
-                <p><img src="images/phone_logo.webp" alt="Icône téléphone" class="footer-icon" loading="lazy"> <a href="tel:+33123456789">+33 01 23 45 67 89</a></p>
-            </div>
-        </div>
-    </footer>
-
+</div>
+</header>
+<main>
+<section class="page-intro vision-intro-section" id="vision-intro">
+<div class="container intro-grid">
+<div class="intro-text-content">
+<h2>EXPLOREZ L'ÎLE-DE-FRANCE <br/>ET VIVEZ <span class="highlight-orange">CHAQUE INSTANT</span></h2>
+<p>Notre vision est de rendre la richesse culturelle et événementielle de l'Île-de-France accessible à tous, en un seul clic. Nous voulons connecter les habitants et les visiteurs aux expériences qui animent la région, des grands festivals aux pépites locales, pour des découvertes inoubliables et des sorties spontanées.</p>
+</div>
+<div class="intro-image-content">
+<img alt="Illustration de la vision IDEvent pour l'exploration de l'Île-de-France" loading="lazy" src="images/vision.webp"/>
+</div>
+</div>
+</section>
+<section class="vision-pillars">
+<div class="container pillars-grid">
+<div class="pillars-image-content">
+<img alt="Personnes consultant des événements sur leurs appareils" loading="lazy" src="images/smarthpone-user.webp"/>
+</div>
+<div class="pillars-text-content">
+<article class="pillar-item">
+<div class="pillar-icon">
+<img alt="Icône Découverte" loading="lazy" src="images/decouverte_logo.webp"/>
+</div>
+<div class="pillar-text">
+<h3>Découverte Facilitée</h3>
+<p>Nous centralisons tous les événements pour que vous trouviez facilement votre prochaine sortie, adaptée à vos goûts et à votre localisation.</p>
+</div>
+</article>
+<article class="pillar-item">
+<div class="pillar-icon">
+<img alt="Icône Connexion Locale" loading="lazy" src="images/lan_logo.webp"/>
+</div>
+<div class="pillar-text">
+<h3>Connexion Locale</h3>
+<p>Nous soutenons les organisateurs locaux et mettons en lumière la diversité des initiatives, renforçant le tissu social et culturel.</p>
+</div>
+</article>
+<article class="pillar-item">
+<div class="pillar-icon">
+<img alt="Icône Richesse Culturelle" loading="lazy" src="images/diversite_logo.webp"/>
+</div>
+<div class="pillar-text">
+<h3>Richesse et Diversité</h3>
+<p>Valoriser chaque type d'événement, des arts vivants aux marchés de créateurs, pour une offre culturelle complète et variée.</p>
+</div>
+</article>
+<article class="pillar-item">
+<div class="pillar-icon">
+<img alt="Icône Simplicité et Spontanéité" loading="lazy" src="images/simplicite_logo.webp"/>
+</div>
+<div class="pillar-text">
+<h3>Simplicité et Spontanéité</h3>
+<p>Une plateforme intuitive pour planifier vos sorties ou trouver une activité de dernière minute, sans effort.</p>
+</div>
+</article>
+</div>
+</div>
+</section>
+<section class="vision-testimonials">
+<div class="container">
+<h2>... Ce qu'ils en <span class="highlight-blue">pensent</span></h2>
+<div class="testimonials-grid">
+<article class="testimonial-card">
+<div class="testimonial-author">
+<img alt="Photo de Prénom NOM 1" loading="lazy" src="images/placeholder.png"/>
+<p class="author-name">Prénom NOM 1 <span class="author-role">(Utilisateur Passionné)</span></p>
+</div>
+<blockquote class="testimonial-quote">
+<p>"Avec IDEvent, je redécouvre ma région chaque week-end ! C'est tellement simple de trouver des événements qui me correspondent. Une vraie mine d'or pour les curieux."</p>
+</blockquote>
+</article>
+<article class="testimonial-card">
+<div class="testimonial-author">
+<img alt="Photo de Prénom NOM 2" loading="lazy" src="images/placeholder.png"/>
+<p class="author-name">Prénom NOM 2 <span class="author-role">(Organisateur d'Événement Local)</span></p>
+</div>
+<blockquote class="testimonial-quote">
+<p>"IDEvent nous a offert une visibilité incroyable. Nos petits événements touchent maintenant un public bien plus large. C'est un super outil pour dynamiser la vie locale."</p>
+</blockquote>
+</article>
+<article class="testimonial-card">
+<div class="testimonial-author">
+<img alt="Photo de Prénom NOM 3" loading="lazy" src="images/placeholder.png"/>
+<p class="author-name">Prénom NOM 3 <span class="author-role">(Nouveau Résident)</span></p>
+</div>
+<blockquote class="testimonial-quote">
+<p>"Arrivé récemment en Île-de-France, IDEvent est devenu mon guide indispensable pour m'intégrer et découvrir la richesse culturelle. Facile et toujours pertinent !"</p>
+</blockquote>
+</article>
+<article class="testimonial-card">
+<div class="testimonial-author">
+<img alt="Photo de Prénom NOM 4" loading="lazy" src="images/placeholder.png"/>
+<p class="author-name">Prénom NOM 4 <span class="author-role">(Adepte de Sorties Spontanées)</span></p>
+</div>
+<blockquote class="testimonial-quote">
+<p>"Je ne planifie jamais rien longtemps à l'avance. Grâce à IDEvent, je trouve toujours une idée de sortie sympa, même au dernier moment. C'est génial !"</p>
+</blockquote>
+</article>
+</div>
+</div>
+</section>
+</main>
+<footer class="site-footer-bottom">
+<div class="container footer-container">
+<div class="footer-logo-info">
+<a class="logo-link" href="index.html">
+<div class="logo">
+<img alt="Logo IDEvent Globe" src="images/logo_big.webp"/>
+<span>IDEvent</span>
+</div>
+</a>
+<p>Tous les événements en Île-de-France, au même endroit.</p>
+<p class="copyright">© IDEvent - 2025</p>
+</div>
+<div class="footer-contact-details">
+<p><img alt="Icône localisation" class="footer-icon" loading="lazy" src="images/localisation_logo.webp"/> 30 Avenue de la République, 94800 Villejuif</p>
+<p><img alt="Icône email" class="footer-icon" loading="lazy" src="images/mail_logo.webp"/> <a href="mailto:business@idevent.com">business@idevent.com</a></p>
+<p><img alt="Icône téléphone" class="footer-icon" loading="lazy" src="images/phone_logo.webp"/> <a href="tel:+33123456789">+33 01 23 45 67 89</a></p>
+</div>
+</div>
+</footer>
 </body>
 </html>
