--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -1,108 +1,105 @@
 <!DOCTYPE html>
+
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Découvrez l'équipe derrière IDEvent et notre vision pour connecter les événements en Île-de-France.">
-    <title>IDEvent - Qui sommes-nous ?</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta content="Découvrez l'équipe derrière IDEvent et notre vision pour connecter les événements en Île-de-France." name="description"/>
+<title>IDEvent - Qui sommes-nous ?</title>
+<link href="style.css" rel="stylesheet"/>
 </head>
 <body>
+<header class="site-header">
+<div class="container nav-container">
+<a class="logo-link" href="index.html">
+<div class="logo">
+<img alt="Logo IDEvent Globe" src="images/logo.ico"/>
+<span>IDEvent</span>
+</div>
+</a>
 
-    <header class="site-header">
-        <div class="container nav-container">
-            <a href="index.html" class="logo-link">
-                <div class="logo">
-                    <img src="images/logo.ico" alt="Logo IDEvent Globe">
-                    <span>IDEvent</span>
-                </div>
-            </a>
-            <nav>
-                <ul>
-                    <li><a href="qui-sommes-nous.html" class="active">Qui sommes nous ?</a></li>
-                    <li><a href="notre-vision.html">Notre vision</a></li>
-                    <li><a href="nos-engagements.html">Nos engagements</a></li>
-                    <li><a href="publication.html">Publication</a></li>
-                    <li><a href="contact.html">Nous contacter</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+<nav>
+<ul>
+<li><a href="index.html">Accueil</a></li>
+<li><a href="qui-sommes-nous.html">Qui sommes-nous ?</a></li>
+<li><a href="notre-vision.html">Notre vision</a></li>
+<li><a href="nos-engagements.html">Nos engagements</a></li>
+<li><a href="green-it-impact.html">Green IT</a></li>
+<li><a href="comparatif.html">Comparatif</a></li>
+<li><a href="test.html">Test</a></li>
+<li><a href="contact.html">Nous contacter</a></li>
+</ul>
+</nav>
 
-    <main>
-        <section class="page-intro" id="page-intro">
-            <div class="container intro-grid">
-                <div class="intro-text-content">
-                    <h2>Pour des sorties <br><span class="highlight-orange">plus spontanées</span></h2>
-                    <p>Chez IDEvent, nous sommes une équipe d'étudiants passionnés, rigoureux dans notre approche et notre analyse, dynamiques et créatifs.</p>
-                </div>
-                <div class="intro-image-content">
-                    <img src="images/team_image.webp" alt="Illustration de l'équipe IDEvent" loading="lazy">
-                </div>
-            </div>
-        </section>
-
-        <section class="team-members">
-            <div class="container">
-                <div class="team-grid-members">
-                    <article class="team-member-card">
-                        <img src="images/placeholder.png" alt="Photo de Mauranne" loading="lazy">
-                        <h4>Prénom NOM 1</h4>
-                        <p class="member-role">Coordinatrice</p>
-                        <p class="member-quote">"J'encourage à explorer de nouvelles approches et à favoriser la créativité."</p>
-                    </article>
-
-                    <article class="team-member-card">
-                        <img src="images/placeholder.png" alt="Photo de Roland Landry" loading="lazy">
-                        <h4>Prénom NOM 2</h4>
-                        <p class="member-role">Développement</p>
-                        <p class="member-quote">"J'assure d'allier rêve et pragmatisme, imaginaire et faisabilité technique."</p>
-                    </article>
-
-                    <article class="team-member-card">
-                        <img src="images/placeholder.png" alt="Photo de Matthieu" loading="lazy">
-                        <h4>Prénom NOM 3</h4>
-                        <p class="member-role">Graphisme / Front-End</p>
-                        <p class="member-quote">"Je fais en sorte que notre vision s'aligne avec la réalité."</p>
-                    </article>
-
-                    <article class="team-member-card">
-                        <img src="images/placeholder.png" alt="Photo de Audrey" loading="lazy">
-                        <h4>Prénom NOM 4</h4>
-                        <p class="member-role">Organisation / Planning</p>
-                        <p class="member-quote">"J'essaie de rendre l'ensemble des processus plus facile à digérer."</p>
-                    </article>
-
-                    <article class="team-member-card">
-                        <img src="images/placeholder.png" alt="Photo de Oluani" loading="lazy">
-                        <h4>Prénom NOM 5</h4>
-                        <p class="member-role">Rédaction / Budget</p>
-                        <p class="member-quote">"Je m'assure de rendre compte de l'ensemble des discussions ainsi que des rendus."</p>
-                    </article>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="site-footer-bottom">
-        <div class="container footer-container">
-            <div class="footer-logo-info">
-                 <a href="index.html" class="logo-link">
-                    <div class="logo">
-                        <img src="images/logo_big.webp" alt="Logo IDEvent Globe">
-                        <span>IDEvent</span>
-                    </div>
-                </a>
-                <p>Tous les événements en Île-de-France, au même endroit.</p>
-                <p class="copyright">© IDEvent - 2025</p>
-            </div>
-            <div class="footer-contact-details">
-                <p><img src="images/localisation_logo.webp" alt="Icône localisation" class="footer-icon" loading="lazy"> 30 Avenue de la République, 94800 Villejuif</p>
-                <p><img src="images/mail_logo.webp" alt="Icône email" class="footer-icon" loading="lazy"> <a href="mailto:business@idevent.com">business@idevent.com</a></p>
-                <p><img src="images/phone_logo.webp" alt="Icône téléphone" class="footer-icon" loading="lazy"> <a href="tel:+33123456789">+33 01 23 45 67 89</a></p>
-            </div>
-        </div>
-    </footer>
-
+</div>
+</header>
+<main>
+<section class="page-intro" id="page-intro">
+<div class="container intro-grid">
+<div class="intro-text-content">
+<h2>Pour des sorties <br/><span class="highlight-orange">plus spontanées</span></h2>
+<p>Chez IDEvent, nous sommes une équipe d'étudiants passionnés, rigoureux dans notre approche et notre analyse, dynamiques et créatifs.</p>
+</div>
+<div class="intro-image-content">
+<img alt="Illustration de l'équipe IDEvent" loading="lazy" src="images/team_image.webp"/>
+</div>
+</div>
+</section>
+<section class="team-members">
+<div class="container">
+<div class="team-grid-members">
+<article class="team-member-card">
+<img alt="Photo de Mauranne" loading="lazy" src="images/placeholder.png"/>
+<h4>Prénom NOM 1</h4>
+<p class="member-role">Coordinatrice</p>
+<p class="member-quote">"J'encourage à explorer de nouvelles approches et à favoriser la créativité."</p>
+</article>
+<article class="team-member-card">
+<img alt="Photo de Roland Landry" loading="lazy" src="images/placeholder.png"/>
+<h4>Prénom NOM 2</h4>
+<p class="member-role">Développement</p>
+<p class="member-quote">"J'assure d'allier rêve et pragmatisme, imaginaire et faisabilité technique."</p>
+</article>
+<article class="team-member-card">
+<img alt="Photo de Matthieu" loading="lazy" src="images/placeholder.png"/>
+<h4>Prénom NOM 3</h4>
+<p class="member-role">Graphisme / Front-End</p>
+<p class="member-quote">"Je fais en sorte que notre vision s'aligne avec la réalité."</p>
+</article>
+<article class="team-member-card">
+<img alt="Photo de Audrey" loading="lazy" src="images/placeholder.png"/>
+<h4>Prénom NOM 4</h4>
+<p class="member-role">Organisation / Planning</p>
+<p class="member-quote">"J'essaie de rendre l'ensemble des processus plus facile à digérer."</p>
+</article>
+<article class="team-member-card">
+<img alt="Photo de Oluani" loading="lazy" src="images/placeholder.png"/>
+<h4>Prénom NOM 5</h4>
+<p class="member-role">Rédaction / Budget</p>
+<p class="member-quote">"Je m'assure de rendre compte de l'ensemble des discussions ainsi que des rendus."</p>
+</article>
+</div>
+</div>
+</section>
+</main>
+<footer class="site-footer-bottom">
+<div class="container footer-container">
+<div class="footer-logo-info">
+<a class="logo-link" href="index.html">
+<div class="logo">
+<img alt="Logo IDEvent Globe" src="images/logo_big.webp"/>
+<span>IDEvent</span>
+</div>
+</a>
+<p>Tous les événements en Île-de-France, au même endroit.</p>
+<p class="copyright">© IDEvent - 2025</p>
+</div>
+<div class="footer-contact-details">
+<p><img alt="Icône localisation" class="footer-icon" loading="lazy" src="images/localisation_logo.webp"/> 30 Avenue de la République, 94800 Villejuif</p>
+<p><img alt="Icône email" class="footer-icon" loading="lazy" src="images/mail_logo.webp"/> <a href="mailto:business@idevent.com">business@idevent.com</a></p>
+<p><img alt="Icône téléphone" class="footer-icon" loading="lazy" src="images/phone_logo.webp"/> <a href="tel:+33123456789">+33 01 23 45 67 89</a></p>
+</div>
+</div>
+</footer>
 </body>
 </html>
