--- a/evenement.html
+++ b/evenement.html
@@ -2,37 +2,37 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Fiche événement – IDEvent, site éco-conçu" />
-  <title>Concert Plein Air – IDEvent</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Fiche événement – IDEvent"/>
+  <title>Fiche événement – IDEvent</title>
   <style>
     body {
       font-family: system-ui, sans-serif;
       margin: 0;
       padding: 0;
-      background: #fdfdfd;
+      background-color: #fdfdfd;
       color: #2c3e50;
-    }
-
-    .green-banner {
-      background-color: #eafaf1;
-      color: #145a32;
-      padding: 0.8rem;
-      text-align: center;
-      font-weight: bold;
+      line-height: 1.5;
     }
 
     header {
       background-color: #f4f4f4;
       padding: 1rem;
       text-align: center;
-      font-weight: bold;
     }
 
-    main {
+    .container {
       max-width: 800px;
       margin: 2rem auto;
       padding: 0 1rem;
+    }
+
+    img.event-image {
+      width: 100%;
+      max-height: 300px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 1rem;
     }
 
     h1 {
@@ -41,29 +41,59 @@
       margin-bottom: 0.5rem;
     }
 
-    .event-image {
-      width: 100%;
-      max-height: 300px;
-      object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-    }
-
     .event-meta {
       font-size: 0.95rem;
       color: #555;
       margin-bottom: 1.5rem;
     }
 
-    p.description {
+    .description {
       font-size: 1rem;
-      line-height: 1.6;
+      color: #333;
     }
 
-    .button {
+    .back-link {
       display: inline-block;
       margin-top: 2rem;
-      padding: 0.7rem 1.4rem;
-      font-size: 1rem;
+      text-decoration: none;
+      color: #27ae60;
       font-weight: bold;
-      background
+    }
+
+    .back-link:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      font-size: 0.8rem;
+      color: #888;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h2>IDEvent – Fiche événement</h2>
+  </header>
+
+  <main class="container">
+    <img src="images/concert.webp" alt="Visuel de l'événement" class="event-image" loading="lazy" />
+
+    <h1>Concert Plein Air</h1>
+    <p class="event-meta">📅 25 juillet – 18h00<br>📍 Parc Floral, Paris</p>
+
+    <div class="description">
+      <p>Rejoignez-nous pour une soirée musicale en plein air avec des artistes locaux et nationaux, dans un cadre naturel et apaisant. L’événement est gratuit et accessible à tous.</p>
+    </div>
+
+    <a href="site-vitrine.html" class="back-link">← Retour aux événements</a>
+  </main>
+
+  <footer>
+    Page sobre, sans cookie, conçue selon les principes du Low Web.
+  </footer>
+
+</body>
+</html>
